force-app/main/default/objects/rv_Service_Visit__c/rv_Service_Visit__c.object-meta.xml
<CustomObject>
    <description>RV Service Visit</description>
    <label>Service Visit</label>
    <nameField>
        <displayFormat>RVS-{000000}</displayFormat>
        <label>Service Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>