force-app/main/default/objects/rv_Service_Visit__c/fields/Area_of_Concern__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Concern__c</fullName>
    <description>Area of concern for visit</description>
    <inlineHelpText>General reason for visit</inlineHelpText>
    <label>Area of Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chassis/Frame</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electrical - Solar</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>