force-app/main/default/objects/rv_Service_Visit__c/fields/Reason_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Visit__c</fullName>
    <description>Reason for the visit</description>
    <label>Reason for Visit</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>