force-app/main/default/objects/rv_Service_Visit__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Description of resolution</description>
    <label>Resolution</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>