force-app/main/default/objects/rv_Service_Visit__c/fields/Rig__c.field-meta.xml
<CustomField>
    <fullName>Rig__c</fullName>
    <description>Rig related to service request</description>
    <label>Rig</label>
    <referenceTo>rv_Rig__c</referenceTo>
    <relationshipLabel>Service Visits</relationshipLabel>
    <relationshipName>Service_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>