force-app/main/default/objects/rv_Service_Visit__c/fields/Warranty_Work__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Visit covered by Warranty</description>
    <inlineHelpText
  >Covered by Work - create another visit if mixed of warranty/non-warranty work.</inlineHelpText>
    <label>Warranty Work</label>
    <type>Checkbox</type>
</CustomField>